update: 登入元件加入行動裝置接口 update: 調整apppay相關config Fix: 基金詳細頁移除分享區塊

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -40,11 +40,16 @@
         <patch:attribute name="language">zh-TW</patch:attribute>
       </site>
     </sites>
+    <pipelines>
+      <httpRequestBegin>
+        <processor patch:after="processor[@type='Sitecore.Pipelines.HttpRequest.ItemResolver, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.AppLogin, Feature.Wealth.Account" resolve="true"/>
+      </httpRequestBegin>
+    </pipelines>
     <settings>
       <setting name="Feature.Wealth.Account.SSO.LogoutUrl" value="https://am.firstbank.com.tw/AGLogout">
         <patch:attribute name="value" environment:require="Staging">https://am5test.firstbank-tt.com.tw/AGLogout</patch:attribute>
       </setting>
-    <!--第三方登入資訊-->
+      <!--第三方登入資訊-->
       <setting name="Facebook.AppId" value="1141789380446473"  environment:require="Local or Development">
         <patch:attribute value="2209337179431272" environment:require="Staging"/>
         <patch:attribute value="472848741837981" environment:require="Production"/>
@@ -72,15 +77,26 @@
       <setting name="AppPay.Id" value="WEA" environment:require="Local or Development or Staging" >
         <patch:attribute value="" environment:require="Production"/>
       </setting>
-      <setting name="AppPay.Key" value="gIVNc3DU71n9yJEc1qPY" environment:require="Local or Development or Staging">
+      <setting name="AppPay.Key" value="gIVNc3DU7ln9yJEclqPY" environment:require="Local or Development or Staging">
         <patch:attribute value="" environment:require="Production"/>
       </setting>
-      <setting name="AppPay.VerifyUrl" value="https://10.14.84.3/apppay/0201.do" environment:require="Local or Development or Staging" >
+      <setting name="AppPay.VerifyUrl" value="https://10.14.84.3/apppay/request/0201.do" environment:require="Local or Development or Staging" >
         <patch:attribute value="" environment:require="Production"/>
       </setting>
-      <setting name="AppPay.CallLoginUrl" value="https://10.14.84.3/apppay/0202.do" environment:require="Local or Development or Staging">
+      <setting name="AppPay.CallLoginUrl" value="https://10.14.84.3/apppay/request/0202.do" environment:require="Local or Development or Staging">
         <patch:attribute value="" environment:require="Production"/>
+      </setting>
+      <!--第e行動&&iLeo登入deeplink-->
+      <setting name="MobileFirste" value="https://fcblink.page.link/?link=https%3A%2F%2Ffcblink.page.link%2FI11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank" environment:require="Local or Development or Staging or Production" >
+      </setting>
+      <setting name="MobileIleo" value="https://fcbileodev.page.link/?link=https://fcbileodev.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite" environment:require="Local or Development or Staging" >
+        <patch:attribute value="https://fcbileo.page.link/?link=https://fcbileo.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite" environment:require="Production"/>
       </setting>
     </settings>
+    <services>
+      <register serviceType="Feature.Wealth.Account.Pipelines.DI.IMemberLoginService, Feature.Wealth.Account"
+				implementationType="Feature.Wealth.Account.Pipelines.DI.MemberLoginService, Feature.Wealth.Account"
+				lifetime="Singleton" />
+    </services>
   </sitecore>
 </configuration>
