--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -35,6 +35,9 @@
       </site>
     </sites>
     <settings>
+      <!--排程Sitecron資料擷取下來路徑-->
+      <setting name="LocalDirectory" value="C:\FCB999" role:require="ContentManagement" environment:require="Local or Production">
+      </setting>
       <!--嘉實api-->
       <setting name="MoneyDjApiRoute">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://openapitest.moneydj.com/</patch:attribute>
