--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -19,8 +19,8 @@
         <patch:attribute name="startItem">/home</patch:attribute>
         <patch:attribute name="language">zh-TW</patch:attribute>
         <patch:attribute name="hostName" environment:require="Local"></patch:attribute>
-        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Development">fcbdev-cm.esi-tech.net|vcb811.esi-tech.net</patch:attribute>
-        <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Development">fcb.cd|fcbdev.esi-tech.net</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Development">fcbdev-cm.esi-tech.net|fcbdev811.esi-tech.net</patch:attribute>
+        <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Development">fcb.cd|fcb.cd2|fcbdev.esi-tech.net</patch:attribute>
         <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Staging">weamg.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="hostName" role:require="ContentDelivery" environment:require="Staging">weaap.fcbsrv-tt.fcb.local|wealth.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="hostName" role:require="ContentManagement" environment:require="Production">weamg.firstbank.com.tw</patch:attribute>
@@ -28,10 +28,10 @@
         <patch:attribute name="targetHostName" environment:require="Local"></patch:attribute>
         <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Development">fcbdev-cm.esi-tech.net</patch:attribute>
         <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Development">fcbdev.esi-tech.net</patch:attribute>
-        <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Staging">weamg.firstbank.com.tw</patch:attribute>
-        <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Staging">wealth.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Staging">weamg.firstbank-tt.com.tw</patch:attribute>
+        <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Staging">wealth.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="targetHostName" role:require="ContentManagement" environment:require="Production">weamg.firstbank.com.tw</patch:attribute>
-        <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Production">weaap.fcbsrv.fcb.local|wealth.firstbank.com.tw</patch:attribute>
+        <patch:attribute name="targetHostName" role:require="ContentDelivery" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
       </site>
     </sites>
     <settings>
