fix: config patch修正&&apppay傳出參數調整 fix:常用功能bug修正 update:登入錯誤訊息統一popup

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -50,47 +50,56 @@
         <patch:attribute name="value" environment:require="Staging">https://am5test.firstbank-tt.com.tw/AGLogout</patch:attribute>
       </setting>
       <!--第三方登入資訊-->
-      <setting name="Facebook.AppId" value="1141789380446473"  environment:require="Local or Development">
-        <patch:attribute value="2209337179431272" environment:require="Staging"/>
-        <patch:attribute value="472848741837981" environment:require="Production"/>
+      <setting name="Facebook.AppId" >
+        <patch:attribute name="value" environment:require="Local or Development">1141789380446473</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">2209337179431272</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">472848741837981</patch:attribute>
       </setting>
-      <setting name="Facebook.AppSecret" value="981b2d74dff9aaecca7ae5ec28a4ee0e"  environment:require="Local or Development">
-        <patch:attribute value="d495c096d8839ea50ca29d4713bd707e" environment:require="Staging"/>
-        <patch:attribute value="de5a8040590ae4b3c0859636b1353658" environment:require="Production"/>
+      <setting name="Facebook.AppSecret">
+        <patch:attribute name="value" environment:require="Local or Development">981b2d74dff9aaecca7ae5ec28a4ee0e</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">d495c096d8839ea50ca29d4713bd707e</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">de5a8040590ae4b3c0859636b1353658</patch:attribute>
       </setting>
       <setting name="Facebook.AuthUrl" value="https://www.facebook.com/v19.0/dialog/oauth?client_id={AppId}&amp;redirect_uri={RedirectUrl}&amp;state={state}" />
       <setting name="Facebook.TokenUrl" value="https://graph.facebook.com/v19.0/oauth/access_token?client_id={AppId}&amp;redirect_uri={RedirectUrl}&amp;client_secret={AppSecret}&amp;code={code}" />
       <setting name="Facebook.ProfileUrl" value="https://graph.facebook.com/v19.0/me?fields=id,name,email" />
-      <setting name="Line.ClientId" value="2004541583" environment:require="Local or Development" >
-        <patch:attribute value="1619990426" environment:require="Staging"/>
-        <patch:attribute value="1626443810" environment:require="Production"/>
+      <setting name="Line.ClientId">
+        <patch:attribute name="value" environment:require="Local or Development">2004541583</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">1619990426</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">1626443810</patch:attribute>
       </setting>
-      <setting name="Line.ClientSecret" value="614ececff1b8984eef0cfdb784b6db75" environment:require="Local or Development">
-        <patch:attribute value="e4aa6c7dd4d61c3c1dcc3cfa65231637" environment:require="Staging"/>
-        <patch:attribute value="b5ee994321512fa6dcf85fa8055f9e2c" environment:require="Production"/>
+      <setting name="Line.ClientSecret">
+        <patch:attribute name="value" environment:require="Local or Development">614ececff1b8984eef0cfdb784b6db75</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">e4aa6c7dd4d61c3c1dcc3cfa65231637</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">b5ee994321512fa6dcf85fa8055f9e2c</patch:attribute>
       </setting>
       <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}"/>
       <setting name="Line.TokenUrl" value="https://api.line.me/oauth2/v2.1/token"/>
       <setting name="Line.ProfileUrl" value="https://api.line.me/v2/profile"/>
       <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify"/>
       <!--一銀網銀登入AppAay資訊-->
-      <setting name="AppPay.Id" value="WEA" environment:require="Local or Development or Staging" >
-        <patch:attribute value="" environment:require="Production"/>
+      <setting name="AppPay.Id">
+        <patch:attribute  name="value" environment:require="Local or Development or Staging">WEA</patch:attribute>
+        <patch:attribute  name="value" environment:require="Production">WEA</patch:attribute>
       </setting>
-      <setting name="AppPay.Key" value="gIVNc3DU7ln9yJEclqPY" environment:require="Local or Development or Staging">
-        <patch:attribute value="" environment:require="Production"/>
+      <setting name="AppPay.Key">
+        <patch:attribute  name="value" environment:require="Local or Development or Staging">gIVNc3DU7ln9yJEclqPY</patch:attribute>
+        <patch:attribute  name="value" environment:require="Production">gIVNc3DU7ln9yJEclqPY</patch:attribute>
       </setting>
-      <setting name="AppPay.VerifyUrl" value="https://10.14.84.3/apppay/request/0201.do" environment:require="Local or Development or Staging" >
-        <patch:attribute value="" environment:require="Production"/>
+      <setting name="AppPay.VerifyUrl">
+        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://10.14.84.3/apppay/request/0201.do</patch:attribute>
+        <patch:attribute  name="value" environment:require="Production">https://10.14.84.3/apppay/request/0201.do</patch:attribute>
       </setting>
-      <setting name="AppPay.CallLoginUrl" value="https://10.14.84.3/apppay/request/0202.do" environment:require="Local or Development or Staging">
-        <patch:attribute value="" environment:require="Production"/>
+      <setting name="AppPay.CallLoginUrl">
+        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://10.14.84.3/apppay/request/0202.do</patch:attribute>
+        <patch:attribute  name="value" environment:require="Production">https://10.14.84.3/apppay/request/0202.do</patch:attribute>
       </setting>
       <!--第e行動&&iLeo登入deeplink-->
-      <setting name="MobileFirste" value="https://fcblink.page.link/?link=https%3A%2F%2Ffcblink.page.link%2FI11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank" environment:require="Local or Development or Staging or Production" >
+      <setting name="MobileFirste" value="https://fcblink.page.link/?link=https%3A%2F%2Ffcblink.page.link%2FI11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank">
       </setting>
-      <setting name="MobileIleo" value="https://fcbileodev.page.link/?link=https://fcbileodev.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite" environment:require="Local or Development or Staging" >
-        <patch:attribute value="https://fcbileo.page.link/?link=https://fcbileo.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite" environment:require="Production"/>
+      <setting name="MobileIleo" >
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https://fcbileodev.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https://fcbileo.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
     </settings>
     <services>
