--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -79,8 +79,8 @@
       <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify"/>
       <!--一銀網銀登入AppAay資訊-->
       <setting name="AppPay.Id">
-        <patch:attribute  name="value" environment:require="Local or Development or Staging">WEA</patch:attribute>
-        <patch:attribute  name="value" environment:require="Production">WEA</patch:attribute>
+        <patch:attribute  name="value" environment:require="Local or Development or Staging">WEALTH</patch:attribute>
+        <patch:attribute  name="value" environment:require="Production">WEALTH</patch:attribute>
       </setting>
       <setting name="AppPay.Key">
         <patch:attribute  name="value" environment:require="Local or Development or Staging">gIVNc3DU7ln9yJEclqPY</patch:attribute>
