Update: EFND、WMS吃config路徑匯入檔案、WMS是null值

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -36,7 +36,9 @@
     </sites>
     <settings>
       <!--排程Sitecron資料擷取下來路徑-->
-      <setting name="LocalDirectory" value="C:\FCB999" role:require="ContentManagement" environment:require="Local or Production">
+      <setting name="LocalDirectory" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Production or Staging">C:\FCB999</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
       </setting>
       <!--嘉實api-->
       <setting name="MoneyDjApiRoute">
