--- a/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
+++ b/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
@@ -4,17 +4,15 @@
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Ftp" value="true" />
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Sftp" value="false" />
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Db" value="false" />
-
-      <setting name="downloadUrl" value="https://dj2.moneydj.com/download/firstbank/FirstbankRawdata2.zip" />
-      <setting name="targetFolder" value="C:\inetpub\wwwroot\sitecore\weamg.fcbsrv.fcb.local\App_Data\zip" />
-      <setting name="destFolder" value="C:\inetpub\wwwroot\sitecore\weamg.fcbsrv.fcb.local\App_Data\DBZIP" />
-      <setting name="FundBSC" value="C:\inetpub\wwwroot\sitecore\weamg.fcbsrv.fcb.local\App_Data\DBZIP\理財網檔案_20240325\TFJSBSC.240324.1000.TXT" />
-      <setting name="FundETF" value="C:\Users\esther.lin\Downloads\理財網檔案_20240325\理財網檔案_20240325\FUND_ETF.TXT" />
-      <setting name="FundSize" value="C:\inetpub\wwwroot\sitecore\weamg.fcbsrv.fcb.local\App_Data\DBZIP\理財網檔案_20240325\FUND_SIZE.TXT" />
-      <setting name="FundTRB" value="C:\Users\esther.lin\Downloads\理財網檔案_20240325\理財網檔案_20240325\FUNDTRB.TXT" />
-      <setting name="WMS" value="C:\Users\esther.lin\Downloads\WMS_DOC_RECM_20240327.TXT" />
-      <setting name="FUND_NAV_TFJSNAV" value="C:\inetpub\wwwroot\sitecore\weamg.fcbsrv.fcb.local\App_Data\DBZIP\理財網檔案_20240325\TFJSNAV.240324.1000.TXT" />
-      <setting name="ETF_NAV_TFJENAV" value="C:\inetpub\wwwroot\sitecore\weamg.fcbsrv.fcb.local\App_Data\DBZIP\理財網檔案_20240325\TFJENAV.240324.1000.TXT" />
+      
+      <setting name="WMS" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Production or Staging">C:\FCB999\WMS_DOC_RECM_20240327.TXT</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
+      </setting>
+      <setting name="EFND" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Production or Staging">C:\FCB999\EFND.txt</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
+      </setting>
     </settings>
   </sitecore>
 </configuration>
