--- a/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
+++ b/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
@@ -6,11 +6,11 @@
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Db" value="false" />
       
       <setting name="WMS" role:require="ContentManagement">
-        <patch:attribute name="value" environment:require="Local or Production or Staging">C:\FCB999\WMS_DOC_RECM_20240327.TXT</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">C:\FCB999\WMS_DOC_RECM_20240327.TXT</patch:attribute>
         <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
       </setting>
       <setting name="EFND" role:require="ContentManagement">
-        <patch:attribute name="value" environment:require="Local or Production or Staging">C:\FCB999\EFND.txt</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">C:\FCB999\EFND.txt</patch:attribute>
         <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
       </setting>
     </settings>
