fix : 調整apppay理財網會員流程

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -43,6 +43,7 @@
     <pipelines>
       <httpRequestBegin>
         <processor patch:after="processor[@type='Sitecore.Pipelines.HttpRequest.ItemResolver, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.AppLogin, Feature.Wealth.Account" resolve="true"/>
+        <processor patch:after="processor[@type='Sitecore.Pipelines.HttpRequest.ItemResolver, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.WebBankLogin, Feature.Wealth.Account" resolve="true"/>
       </httpRequestBegin>
     </pipelines>
     <settings>
