fix: 修改pipeline及dynamic tostring

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -41,10 +41,10 @@
       </site>
     </sites>
     <pipelines>
-      <httpRequestBegin>
+      <httpRequestProcessed>
         <processor patch:after="processor[@type='Sitecore.Pipelines.HttpRequest.ItemResolver, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.AppLogin, Feature.Wealth.Account" resolve="true"/>
         <processor patch:after="processor[@type='Sitecore.Pipelines.HttpRequest.ItemResolver, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.WebBankLogin, Feature.Wealth.Account" resolve="true"/>
-      </httpRequestBegin>
+      </httpRequestProcessed>
     </pipelines>
     <settings>
       <setting name="Feature.Wealth.Account.SSO.LogoutUrl" value="https://am.firstbank.com.tw/AGLogout">
