Update: BasicFund、HoldingETF4

--- a/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
+++ b/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
@@ -13,6 +13,14 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">C:\FCB999\EFND.txt</patch:attribute>
         <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
       </setting>
+      <setting name="HoldingFund4" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">"C:\FCB999\0612\SYSJUST-HOLDING-FUND-4.txt"</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
+      </setting>
+      <setting name="BasicFund" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">"C:\FCB999\0612\SYSJUST-BASIC-FUND.txt"</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
+      </setting>
     </settings>
   </sitecore>
 </configuration>
