--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -95,6 +95,8 @@
         <patch:attribute  name="value" environment:require="Local or Development or Staging">https://10.14.84.3/apppay/request/0202.do</patch:attribute>
         <patch:attribute  name="value" environment:require="Production">https://10.14.84.3/apppay/request/0202.do</patch:attribute>
       </setting>
+      <setting name="WebBank.CallBackUrl" value="/api/client/Accounts/SignInWebBank?sc_lang=zh-TW&amp;sc_site=wealth-zh-hant">        
+      </setting>
       <!--第e行動&&iLeo登入deeplink-->
       <setting name="MobileFirste" value="https://fcblink.page.link/?link=https%3A%2F%2Ffcblink.page.link%2FI11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank">
       </setting>
