B02.首頁搜尋元件(Search Bar)

--- a/src/Feature/Component/platform/Feature.Wealth.Component.csproj
+++ b/src/Feature/Component/platform/Feature.Wealth.Component.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\..\..\Foundation\Wealth\platform\Foundation.Wealth.csproj" />
     <ProjectReference Include="..\..\Account\platform\Feature.Wealth.Account.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\SearchBar\" />
+    <Folder Include="Views\Feature\Wealth\Component\SearchBar\" />
+  </ItemGroup>
 </Project>
