update: 基金/ETF詳細頁 && 近五年需求調整 fix: 關注清單bug fix update: 到價通知設定防呆調整 update: 會員首頁牌卡加入風險評估

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -93,6 +93,20 @@
         <patch:attribute name="value" environment:require="Staging">https://mbankTest.firstbank.com.tw:8443/fbp/MBankTxnLiteFTL.action</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://mbank.firstbank.com.tw:8443/fbp/MBankTxnLiteFTL.action</patch:attribute>
       </setting>
+      <!--風險評估route 第e個網-->
+      <setting name="WebKYC">
+        <patch:attribute name="value" environment:require="Staging">https://ibanktest.firstbank.com.tw/NetBank/goKYC.html</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://ibank.firstbank.com.tw/NetBank/goKYC.html</patch:attribute>
+      </setting>
+      <!--風險評估route 第e行動-->
+      <setting name="FirsteKYC">
+        <patch:attribute name="value" environment:require="Staging or Production">https://fcblink.page.link/?link=https://fcblink.page.link/F14&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank</patch:attribute>
+      </setting>
+      <!--風險評估route iLeo-->
+      <setting name="IleoKYC">
+        <patch:attribute name="value" environment:require="Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundKYC&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundKYC&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+      </setting>
     </settings>
   </sitecore>
 </configuration>
