Update : 調整新聞Cache過期時間方法

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -71,14 +71,14 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundRegular?FundCode%3D{}&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundRegular?FundCode%3D{}&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
-       <!--ETF、國外股票申購-第e個網-->
+      <!--ETF、國外股票申購-第e個網-->
       <setting name="WebEntrust">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/NetBank/ETF/txnBuy-RWD.html?prdCode=代碼</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://ibank.firstbank.com.tw/NetBank/ETF/txnBuy-RWD.html?prdCode=代碼</patch:attribute>
       </setting>
-       <!--ETF、國外股票申購-第e行動-->
+      <!--ETF、國外股票申購-第e行動-->
       <setting name="MobileEntrust" value="https://fcblink.page.link/?link=https%3A%2F%2Ffcblink.page.link%2FF18%3Fchn%3Dwms%26emp_id%3D%26prdCode%3D代碼&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank"/>
-       <!--ETF、國外股票申購-iLeo-->
+      <!--ETF、國外股票申購-iLeo-->
       <setting name="IleoEntrust">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.DEV</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
@@ -107,6 +107,8 @@
         <patch:attribute name="value" environment:require="Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundKYC&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundKYC&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
+      <!-- 頭條新聞、新聞列表、新聞詳細-Cache過期時間-->
+      <setting name="NewsCacheTime" value="30m"/>
     </settings>
   </sitecore>
 </configuration>
