update: 加入壓測 測試登入元件，returnurl加入log

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -98,6 +98,8 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https://fcbileodev.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https://fcbileo.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
+      <!--壓力測試使用 6碼-->
+      <setting name="StressTestId" value="123123"/>
     </settings>
   </sitecore>
 </configuration>
