--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -109,6 +109,8 @@
       </setting>
       <!-- 頭條新聞、新聞列表、新聞詳細-Cache過期時間-->
       <setting name="NewsCacheTime" value="30m"/>
+      <!-- 結構型商品列表、結構型商品詳細-Cache過期時間-->
+      <setting name="StructuredProductCacheTime" value="30m"/>
     </settings>
   </sitecore>
 </configuration>
