--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -82,12 +82,12 @@
         <patch:attribute  name="value" environment:require="Production">gIVNc3DU7ln9yJEclqPY</patch:attribute>
       </setting>
       <setting name="AppPay.VerifyUrl">
-        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://10.14.84.3/apppay/request/0201.do</patch:attribute>
-        <patch:attribute  name="value" environment:require="Production">https://10.14.84.3/apppay/request/0201.do</patch:attribute>
+        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/apppay/request/0201.do</patch:attribute>
+        <patch:attribute  name="value" environment:require="Production">https://ibank.firstbank.com.tw/apppay/request/0201.do</patch:attribute>
       </setting>
       <setting name="AppPay.CallLoginUrl">
-        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://10.14.84.3/apppay/request/0202.do</patch:attribute>
-        <patch:attribute  name="value" environment:require="Production">https://10.14.84.3/apppay/request/0202.do</patch:attribute>
+        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/apppay/request/0202.do</patch:attribute>
+        <patch:attribute  name="value" environment:require="Production">https://ibank.firstbank.com.tw/apppay/request/0202.do</patch:attribute>
       </setting>
       <setting name="WebBank.CallBackUrl" value="/api/client/Accounts/SignInWebBank?sc_lang=zh-TW&amp;sc_site=wealth-zh-hant">        
       </setting>
