add : E02-3會員首頁通知&&到價通知排程

--- a/src/Feature/Component/platform/Feature.Wealth.Component.csproj
+++ b/src/Feature/Component/platform/Feature.Wealth.Component.csproj
@@ -23,5 +23,6 @@
     </Reference>
     <ProjectReference Include="..\..\..\Foundation\Wealth\platform\Foundation.Wealth.csproj" />
     <ProjectReference Include="..\..\Account\platform\Feature.Wealth.Account.csproj" />
+    <ProjectReference Include="..\..\ScheduleAgent\platform\Feature.Wealth.ScheduleAgent.csproj" />
   </ItemGroup>
 </Project>
