--- a/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
+++ b/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
@@ -4,7 +4,6 @@
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Ftp" value="true" />
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Sftp" value="false" />
       <setting name="Feature.Wealth.ScheduleAgent.FeatureToggle.Db" value="false" />
-      
       <setting name="WMS" role:require="ContentManagement">
         <patch:attribute name="value" environment:require="Local or Development or Staging">C:\FCB999\WMS_DOC_RECM_20240327.TXT</patch:attribute>
         <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
@@ -20,6 +19,34 @@
       <setting name="BasicFund" role:require="ContentManagement">
         <patch:attribute name="value" environment:require="Local or Development or Staging">C:\FCB999\0612\SYSJUST-BASIC-FUND.txt</patch:attribute>
         <patch:attribute name="value" environment:require="Production">D:\FCB</patch:attribute>
+      </setting>
+      <!--Mail Server相關設定-->
+      <setting name="MailServer" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Development">sandbox.smtp.mailtrap.io</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">10.14.88.193</patch:attribute>
+        <patch:attribute name="value" environment:require="Production"></patch:attribute>
+      </setting>
+      <setting name="MailServerPort"  value="25" role:require="ContentManagement" />
+      <setting name="MailServerUseSsl" value="false" role:require="ContentManagement"/>
+      <setting name="MailServerUserName" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Development">esi@esi.tech.net</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">wealth@firstbank.com.tw</patch:attribute>
+        <patch:attribute name="value" environment:require="Production"></patch:attribute>
+      </setting>
+      <setting name="MailServerUser" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Development">3eb3bf2b32e118</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">wealth@firstbank.com.tw</patch:attribute>
+        <patch:attribute name="value" environment:require="Production"></patch:attribute>
+      </setting>
+      <setting name="MailServerMima" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Development">8ac68e7e83e639</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">Fcbfcb079@1357</patch:attribute>
+        <patch:attribute name="value" environment:require="Production"></patch:attribute>
+      </setting>
+      <setting name="CDHostName" role:require="ContentManagement">
+        <patch:attribute name="value" environment:require="Local or Development">fcbdev.esi-tech.net</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">wealth.firstbank-tt.com.tw</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
       </setting>
     </settings>
   </sitecore>
