fix: 刷新會員資料另開function && 正式apppay key調整

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -79,7 +79,7 @@
       </setting>
       <setting name="AppPay.Key">
         <patch:attribute  name="value" environment:require="Local or Development or Staging">gIVNc3DU7ln9yJEclqPY</patch:attribute>
-        <patch:attribute  name="value" environment:require="Production">gIVNc3DU7ln9yJEclqPY</patch:attribute>
+        <patch:attribute  name="value" environment:require="Production">HcNFUSi9G2agXcg6V6Ks</patch:attribute>
       </setting>
       <setting name="AppPay.VerifyUrl">
         <patch:attribute  name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/apppay/request/0201.do</patch:attribute>
