--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -32,7 +32,7 @@
         <patch:attribute name="loginPage" environment:require="Local or Development">/sitecore/login</patch:attribute>
       </site>
       <site name="admin">
-        <patch:attribute name="loginPage" environment:require="Local or Staging or Production">/sitecore/admin/login.aspx</patch:attribute>
+        <patch:attribute name="loginPage">/sitecore/admin/login.aspx</patch:attribute>
       </site>
       <site name="login-sso" inherits="login" patch:before="site[@name='login']" environment:require="Local or Staging or Production">
         <patch:attribute name="virtualFolder">/sso/login</patch:attribute>
@@ -43,6 +43,9 @@
     <settings>
       <setting name="Feature.Wealth.Account.SSO.LogoutUrl" value="https://am.firstbank.com.tw/AGLogout">
         <patch:attribute name="value" environment:require="Staging">https://am5test.firstbank-tt.com.tw/AGLogout</patch:attribute>
+      </setting>
+      <setting name="Feature.Wealth.Account.SSO.LoginQueryString" value="false">
+        <patch:attribute name="value" environment:require="Development">true</patch:attribute>
       </setting>
       <!--第三方登入資訊-->
       <setting name="Facebook.AppId" >
