--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -111,6 +111,14 @@
       <setting name="NewsCacheTime" value="30m"/>
       <!-- 結構型商品列表、結構型商品詳細-Cache過期時間-->
       <setting name="StructuredProductCacheTime" value="30m"/>
+      <setting name="IMVP">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://10.14.88.77:9444</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://10.14.88.77:9444</patch:attribute>
+      </setting>
+      <setting name="Octon">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://weamvp.firstbank-tt.com.tw:8443</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://weamvp.firstbank.com.tw:8443</patch:attribute>
+      </setting>
     </settings>
   </sitecore>
 </configuration>
