update: 基金詳細頁走勢圖x軸調整 fix: apppay 0201使用ip

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -85,8 +85,8 @@
         <patch:attribute  name="value" environment:require="Production">HcNFUSi9G2agXcg6V6Ks</patch:attribute>
       </setting>
       <setting name="AppPay.VerifyUrl">
-        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/apppay/request/0201.do</patch:attribute>
-        <patch:attribute  name="value" environment:require="Production">https://ibank.firstbank.com.tw/apppay/request/0201.do</patch:attribute>
+        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://10.14.84.3/apppay/request/0201.do</patch:attribute>
+        <patch:attribute  name="value" environment:require="Production">https://10.20.10.43/apppay/request/0201.do</patch:attribute>
       </setting>
       <setting name="AppPay.CallLoginUrl">
         <patch:attribute  name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/apppay/request/0202.do</patch:attribute>
