--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -37,7 +37,7 @@
       <site name="login-sso" inherits="login" patch:before="site[@name='login']" environment:require="Local or Staging or Production">
         <patch:attribute name="virtualFolder">/sso/login</patch:attribute>
         <patch:attribute name="physicalFolder">/sso/login</patch:attribute>
-        <patch:attribute name="language">zh-TW</patch:attribute>
+        <patch:attribute name="content">master</patch:attribute>
       </site>
     </sites>
     <settings>
