--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -34,7 +34,7 @@
       <site name="admin">
         <patch:attribute name="loginPage">/sitecore/admin/login.aspx</patch:attribute>
       </site>
-      <site name="login-sso" inherits="login" patch:before="site[@name='login']" environment:require="Local or Staging or Production">
+      <site name="login-sso" inherits="login" patch:before="site[@name='login']">
         <patch:attribute name="virtualFolder">/sso/login</patch:attribute>
         <patch:attribute name="physicalFolder">/sso/login</patch:attribute>
         <patch:attribute name="content">master</patch:attribute>
