市場新聞資料匯入排程

--- a/src/Feature/ScheduleAgent/platform/Feature.Wealth.ScheduleAgent.csproj
+++ b/src/Feature/ScheduleAgent/platform/Feature.Wealth.ScheduleAgent.csproj
@@ -20,5 +20,6 @@
     <PackageReference Include="FluentFTP" />
     <PackageReference Include="Quartz" />
     <PackageReference Include="SSH.NET" VersionOverride="2024.0.0" />
+    <PackageReference Include="Mapster" />
   </ItemGroup>
 </Project>
