--- a/src/Foundation/Wealth/platform/App_Config/Include/Foundation/Foundation.Wealth/Foundation.Wealth.config
+++ b/src/Foundation/Wealth/platform/App_Config/Include/Foundation/Foundation.Wealth/Foundation.Wealth.config
@@ -4,6 +4,36 @@
       <initialize>
         <processor type="Foundation.Wealth.Pipelines.Initialize.ClientRoute, Foundation.Wealth" patch:after="processor[@type='Sitecore.Pipelines.Loader.EnsureAnonymousUsers, Sitecore.Kernel']" />
       </initialize>
+      <httpRequestBegin>
+        <!--
+          設定簡易轉導
+          DefineRedirectFields => 定義抓取欄位，使用順序後至前
+          IgnoreSite => 設定忽略的 site
+        -->
+        <processor patch:after="*[@type='Sitecore.Pipelines.HttpRequest.ItemResolver, Sitecore.Kernel']" type="Foundation.Wealth.Pipelines.HttpRequestBegin.RedirectItem, Foundation.Wealth" resolve="true">
+          <IgnoreSites hint="list">
+            <IgnoreSite>scheduler</IgnoreSite>
+            <IgnoreSite>publisher</IgnoreSite>
+            <IgnoreSite>exm</IgnoreSite>
+            <IgnoreSite role:require="Standalone or ContentManagement">website</IgnoreSite>
+          </IgnoreSites>
+          <DefineRedirectFields hint="list">
+            <DefineRedirectField></DefineRedirectField>
+          </DefineRedirectFields>
+        </processor>
+        <!--
+          設置無版本但包含Layout的轉導
+          Sites => 設定執行的 site
+         -->
+        <processor patch:before="*[@type='Foundation.Wealth.Pipelines.HttpRequestBegin.RedirectItem, Foundation.Wealth']"
+                   type="Foundation.Wealth.Pipelines.HttpRequestBegin.VersionNotfoundRedirect, Foundation.Wealth" resolve="true"
+                   role:require="Standalone or ContentManagement or ContentDelivery">
+          <Sites hint="list">
+            <Site>tcb</Site>
+            <Site>tcb-en</Site>
+          </Sites>
+        </processor>
+      </httpRequestBegin>
     </pipelines>
     <events>
       <event name="publish:itemProcessed" role:require="Standalone or ContentManagement">
