Fix: 加密參數改用dapper DbString

--- a/src/Feature/Account/platform/Feature.Wealth.Account.csproj
+++ b/src/Feature/Account/platform/Feature.Wealth.Account.csproj
@@ -9,6 +9,7 @@
     <ProjectCapability Include="SupportsSystemWeb" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Dapper" />
     <PackageReference Include="Flurl" />
     <PackageReference Include="Flurl.Http" />
   </ItemGroup>
