Fix: 調整正式環境cd不跑排程之設定

--- a/src/Project/Wealth/platform/App_Config/Include/Foundation/Xcms/Xcms.Sitecore.Foundation.QuartzSchedule.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Foundation/Xcms/Xcms.Sitecore.Foundation.QuartzSchedule.config
@@ -20,7 +20,7 @@
       <setting name="SiteCron.GetItemIndex" value="sitecore_master_index" />
 
       <!-- If using an Dedicated Publishing instance then by default run SiteCron jobs on the DP Server - set to false to run on CM -->
-      <setting name="UsePublishingInstanceAsPrimaryServer" value="true" />
+      <setting name="UsePublishingInstanceAsPrimaryServer" value="false" />
 
       <!-- Setting to enable disable Execute Now context menu -->
       <setting name="SiteCron.EnableExecuteNow" value="true" />
